Make get request when button clicked and save activities to localStorage

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,3 +11,23 @@
   font-size: 20px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
+
+.suggestions-button:hover {
+  background-color: hsla(0, 0%, 84%, 0.274);
+}
+
+.suggestions-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.suggestions-container .suggestions-card {
+  border: none;
+  border-radius: 5px;
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  color: hsla(0, 0%, 0%, 0.791);
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
