--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,49 +3,29 @@
   margin-bottom: 40px;
 }
 
+.button-container .choose {
+  font-size: 20px;
+}
+
+.button-container .dropdown {
+  padding: 5px 10px;
+  font-size: 19px;
+  border: 1px solid hsla(0, 0%, 76%, 0.274);
+  border-radius: 5px 0px 0px 5px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+}
+
 .activities-button {
   color: hsl(163, 86%, 27%);
   background-color: hsla(0, 0%, 76%, 0.274);
   border: none;
-  border-radius: 5px;
+  border-radius: 0px 5px 5px 0px;
   padding: 5px 10px;
+  margin-left: -4px;
   font-size: 20px;
   box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 .activities-button:hover {
   background-color: hsla(0, 0%, 84%, 0.274);
-}
-
-.activities-container {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
-}
-
-.activities-container .activities-card {
-  border: none;
-  border-radius: 5px;
-  width: 450px;
-  display: flex;
-  flex-direction: column;
-  color: hsla(0, 0%, 0%, 0.791);
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-}
-
-.activities-card .activity-container {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin: 0pc 20px;
-  border-bottom: 1px solid hsla(0, 1%, 50%, 0.432);
-}
-
-.activity-container .delete-button {
-  margin-left: auto;
-  height: 22px;
-  background-color: white;
-  color: hsl(163, 86%, 27%);
-  border: none;
-  border-radius: 50%;
 }
