--- a/src/styles/activities-card.css
+++ b/src/styles/activities-card.css
@@ -60,6 +60,11 @@
   border-bottom: 1px solid hsla(0, 1%, 50%, 0.432);
 }
 
+.checkbox {
+  height: 10px;
+  margin-right: 10px;
+}
+
 .activity-container .delete-button {
   margin-left: auto;
   height: 22px;
