--- a/src/styles/date-container.css
+++ b/src/styles/date-container.css
@@ -12,7 +12,7 @@ dialog {
 }
 
 .close-info {
-  padding: 0px 20px 20px 20px;
+  padding: 5px 20px 0px 20px;
   display: flex;
   flex-direction: row;
 }
@@ -28,4 +28,17 @@ dialog {
 
 h4 {
   margin: 0px 10px 0px 0px;
+}
+
+.date-submit-container {
+  display: flex;
+}
+
+.date-submit-button {
+  margin: 15px 20px 10px auto;
+  background-color: hsl(163, 86%, 27%);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 5px 10px;
 }
