--- a/src/styles/body.css
+++ b/src/styles/body.css
@@ -1,3 +1,9 @@
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
