--- a/src/styles/date-container.css
+++ b/src/styles/date-container.css
@@ -42,3 +42,15 @@ h4 {
   border-radius: 5px;
   padding: 5px 10px;
 }
+
+@media (max-width: 500px) {
+  .close-info,
+  .date-submit-button {
+    font-size: 14px;
+  }
+
+  .date-input {
+    width: 90px;
+    font-size: 12px;
+  }
+}
