Added html for when there are no completed activities in the Completed tab.

--- a/src/styles/activities-card.css
+++ b/src/styles/activities-card.css
@@ -68,6 +68,8 @@
 .empty-activities-message p {
   color: rgba(0, 0, 0, 0.795);
   margin-bottom: 18.75px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .checkbox {
